java13 maven assembly plugin up